# serializer version: 1
# name: test_delivery_status_cli
  '''
  {
    "delivery_id": "20120114T120001-product1-4811",
    "pushing_entity_id": "GLO-MERCATOR-TOULOUSE-FR",
    "product_id": "product1",
    "dataset_id": "dataset1",
    "operations": [
      {
        "operation": "upload",
        "files": [
          {
            "key_suffix": "file1.txt",
            "file_size_mb": 0,
            "checksum": "c08af741236b563ed7ac6e240623a6f5-1",
            "upload_start_time": "2012-01-14T12:00:01Z",
            "upload_end_time": "2012-01-14T12:00:01Z"
          },
          {
            "key_suffix": "file2.txt",
            "file_size_mb": 0,
            "checksum": "727a3ead5c2a5492759091a67cb31068-1",
            "upload_start_time": "2012-01-14T12:00:01Z",
            "upload_end_time": "2012-01-14T12:00:01Z"
          }
        ]
      }
    ],
    "status": "pending"
  }
  '''
# ---
# name: test_delivery_status_python_interface
  '''
  {
    "delivery_id": "20120114T120001-product1-4582",
    "pushing_entity_id": "GLO-MERCATOR-TOULOUSE-FR",
    "product_id": "product1",
    "dataset_id": "dataset1",
    "operations": [
      {
        "operation": "upload",
        "files": [
          {
            "key_suffix": "file1.txt",
            "error_message": null,
            "file_size_mb": 0,
            "checksum": "c08af741236b563ed7ac6e240623a6f5-1",
            "upload_start_time": "2012-01-14T12:00:01Z",
            "upload_end_time": "2012-01-14T12:00:01Z"
          },
          {
            "key_suffix": "file2.txt",
            "error_message": null,
            "file_size_mb": 0,
            "checksum": "727a3ead5c2a5492759091a67cb31068-1",
            "upload_start_time": "2012-01-14T12:00:01Z",
            "upload_end_time": "2012-01-14T12:00:01Z"
          }
        ]
      }
    ],
    "status": "pending",
    "status_timestamp": null,
    "error_message": null
  }
  '''
# ---
